# tantivy-py

./: Cargo.toml  Makefile  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  publish.yaml  python.yaml  scorecard.yml  scorecards.yml
src/: document.rs  facet.rs  filters.rs  index.rs  lib.rs  more_collectors.rs  parser_error.rs  query.rs  schema.rs  searcher.rs  searcher_frame_document.rs  tokenizer.rs
src/filters/: filter_constants.rs  outer_punctuation_filter.rs
tantivy/: tantivy.pyi
tests/: conftest.py  tantivy_kapiche_test.py  tantivy_test.py  test_stat_collector.py  test_tokenizers.py
