[package]
name = "tantivy"
version = "0.19.0"
readme = "README.md"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.17.3"

[dependencies]
time = { version = "0.3.10",
features = ["serde-well-known"] }
tantivy = "0.19"
itertools = "0.10.3"
futures = "0.3.21"
serde_json = "1.0.79"

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module"]
